kickseed (0.49) UNRELEASED; urgency=low

  * Adjust 'bootloader --md5pass' for changes in grub-installer 1.31
    (LP: #221501).

 -- Colin Watson <cjwatson@debian.org>  Wed, 30 Apr 2008 10:19:17 +0100

kickseed (0.48) unstable; urgency=low

  [ Colin Watson ]
  * Allow 'preseed' to take just two arguments, equivalent to an empty
    value.

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 11:05:25 -0200

kickseed (0.47) unstable; urgency=low

  * Set Maintainer to debian-boot.
  * Use in-target to run chrooted %post scripts.
  * Use /lib/partman/display.d rather than /lib/partman/auto.d.

 -- Colin Watson <cjwatson@debian.org>  Sun, 28 Oct 2007 15:26:48 +0000

kickseed (0.46) unstable; urgency=low

  * Moved to d-i SVN; maintaining it here henceforth.
  * Update copyright dates.
  * Remove Ubuntu-specific hostname in setup/net.
  * Unbrand an Ubuntu-specific error message.
  * Remove some old base-config cruft.
  * The Ubuntu standard tasks are now just called 'standard', and this makes
    more sense for Debian too.

 -- Colin Watson <cjwatson@debian.org>  Fri, 05 Oct 2007 14:49:18 +0100

kickseed (0.45) gutsy; urgency=low

  * Make ksdevice=link equivalent to leaving out ksdevice, since that's
    netcfg's default behaviour.
  * Make ksdevice=bootif emit a warning and be equivalent to leaving out
    ksdevice for now. Once netcfg supports being preseeded with a MAC
    address, this can be supported.
  * Support 'part swap --recommended' (thanks, Rohit Kumar Mehta).
  * I'm not sure how swap partition preseeding ever worked, because the
    filesystem slot in the recipe is supposed to be "linux-swap", not
    "swap". Fixed.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Jun 2007 21:50:01 +0100

kickseed (0.44) feisty; urgency=low

  * Support --interpreter for %post scripts without --nochroot (pointed out
    by Jérôme Benois).
  * Fix broken %post argument parsing.
  * Run kickseed_post in test-kickseed again; this time, print a notice when